--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -38,7 +38,7 @@
         <section class="description">
           <img src="../img/noodles.jpg" alt="Cooked noodles topped with green onions and red chili peppers in a skillet." height="350" width="350">
           <h2>Description</h2>
-          <p>This is a simple yet absolutely flavor-packed Thai noodles dish &mdash; for those who aren't afraid of a bit of heat.</p>
+          <p>A simple yet absolutely flavor-packed Thai noodles dish &mdash; for those who aren't afraid of a bit of heat.</p>
           <div class="recipe-details">
             <table>
               <caption>Recipe details for sriracha noodles</caption>
@@ -85,7 +85,7 @@
               </li>
               <li>
                 <input type="checkbox" id="garlic">
-                <label for="garlic">3 - 4 garlic cloves, minced</label>
+                <label for="garlic">3 to 4 garlic cloves, minced</label>
               </li>
               <li>
                 <input type="checkbox" id="sweet-pepper">
@@ -125,7 +125,7 @@
                 </li>
                 <li>
                   <input type="checkbox" id="soy">
-                  <label for="soy">2 - 3 Tbsp. dark soy sauce</label>
+                  <label for="soy">2 to 3 Tbsp. dark soy sauce</label>
                 </li>
                 <li>
                   <input type="checkbox" id="vinegar">
@@ -154,7 +154,7 @@
             <h3>Steps</h3>
             <ol>
               <li>
-                Cook rice noodles (or your favorite noodles) in salted water until al dente (do not overcook them). Drain.
+                Cook rice noodles in salted water until al dente (do not overcook them). Drain.
               </li>
               <li>
                 Heat oil in a skillet and saut&eacute; garlic and ginger over medium heat for about 1 minute, stirring frequently. Add hot chili pepper, red sweet pepper, the whites of the spring onions, salt, pepper, and smoked paprika. Saut&eacute; for about 4 minutes, stirring frequently. Also, stir in tomato paste and sriracha.
