Change recipe content

--- a/index.html
+++ b/index.html
@@ -32,14 +32,6 @@
         <div>
           <h2>Find a Recipe</h2>
           <article>
-            <img src="img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese." height="250" width="250">
-            <h3>Chicken Enchiladas</h3>
-            <p>
-              Special extra: serve topped with chopped fresh cilantro or shredded lettuce, and chopped tomatoes.
-            </p>
-            <a href="recipes/enchiladas.html">Go to recipe</a>
-          </article>
-          <article>
             <img src="img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="250" width="250">
             <h3>Granola & Yogurt Bowl</h3>
             <p>
@@ -54,6 +46,14 @@
               This dish is a wonderful, quick mid-week meal and healthier than your favorite instant noodle packets.
             </p>
             <a href="recipes/noodles.html">Go to recipe</a>
+          </article>
+          <article>
+            <img src="img/taco-salad.jpg" alt="Tortilla chips topped with ground turkey, vegetables, shredded cheese, and salad dressing in a bowl." height="250" width="250">
+            <h3>Taco Salad</h3>
+            <p>
+              Do you participate in Taco Tuesday regularly? There are many different taco recipes... and this healthy taco salad.
+            </p>
+            <a href="recipes/taco-salad.html">Go to recipe</a>
           </article>
         </div>
       </section>
