--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -25,7 +25,7 @@
           </a>
         </li>
         <li>
-          <a href="../recipes/enchiladas.html" aria-label="Next recipe">
+          <a href="../recipes/taco-salad.html" aria-label="Next recipe">
             Next Recipe
             <span class="material-symbols-outlined">chevron_right</span>
           </a>
