--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -19,13 +19,13 @@
     <nav>
       <ul>
         <li>
-          <a href="../recipes/enchiladas.html" aria-label="Previous recipe">
+          <a href="../recipes/taco-salad.html" aria-label="Previous recipe">
             <span class="material-symbols-outlined">chevron_left</span>
             Previous Recipe
           </a>
         </li>
         <li>
-          <a href="../recipes/orange-chicken.html" aria-label="Next recipe">
+          <a href="../recipes/noodles.html" aria-label="Next recipe">
             Next Recipe
             <span class="material-symbols-outlined">chevron_right</span>
           </a>
