--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <div>
           <h2>Find a Recipe</h2>
           <article>
-            <img src="img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="250" width="250">
+            <img src="img/yogurt-mix.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="250" width="250">
             <h3>Granola & Yogurt Bowl</h3>
             <p>
               This bowl provides vitamins, calcium, protein, healthy carbs, and healthy fats that our bodies need daily.
             </p>
-            <a href="recipes/yogurt.html">Go to recipe</a>
+            <a href="recipes/yogurt-mix.html">Go to recipe</a>
           </article>
           <article>
             <img src="img/noodles.jpg" alt="Cooked noodles topped with green onions and sweet bell peppers in a bowl with chopsticks." height="250" width="250">
