--- a/recipes/yogurt-mix.html
+++ b/recipes/yogurt-mix.html
@@ -36,7 +36,7 @@
       <article>
         <h1>Granola & Yogurt Bowl</h1>
         <section class="description">
-          <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="350" width="350">
+          <img src="../img/yogurt-mix.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="350" width="350">
           <h2>Description</h2>
           <p>Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!</p>
           <div class="recipe-details">
