Rename file paths

--- a/recipes/taco-salad.html
+++ b/recipes/taco-salad.html
@@ -25,7 +25,7 @@
           </a>
         </li>
         <li>
-          <a href="../recipes/yogurt.html" aria-label="Next recipe">
+          <a href="../recipes/yogurt-mix.html" aria-label="Next recipe">
             Next Recipe
             <span class="material-symbols-outlined" aria-hidden="true">chevron_right</span>
           </a>
