--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -19,7 +19,7 @@
     <nav>
       <ul>
         <li>
-          <a href="../recipes/yogurt.html" aria-label="Previous recipe">
+          <a href="../recipes/yogurt-mix.html" aria-label="Previous recipe">
             <span class="material-symbols-outlined">chevron_left</span>
             Previous Recipe
           </a>
