--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -36,7 +36,7 @@
       <article>
         <h1>Sriracha Noodles</h1>
         <section class="description">
-          <img src="../img/noodles.jpg" alt="Cooked noodles topped with green onions and red chili peppers in a skillet." height="350" width="350">
+          <img src="../img/noodles.jpg" alt="Cooked noodles topped with green onions and red bell peppers in a skillet." height="350" width="350">
           <h2>Description</h2>
           <p>A simple yet absolutely flavor-packed Thai noodles dish &mdash; for those who aren't afraid of a bit of heat.</p>
           <div class="recipe-details">
