Rename selectors and change content text

--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -36,7 +36,7 @@
       <article>
         <h1>Sriracha Noodles</h1>
         <section class="description">
-          <img src="../img/noodles.jpg" alt="Cooked noodles topped with green onions and red bell peppers in a skillet." height="350" width="350">
+          <img src="../img/noodles.jpg" alt="Cooked noodles topped with green onions and red bell peppers in a bowl with chopsticks." height="350" width="350">
           <h2>Description</h2>
           <p>A simple yet absolutely flavor-packed Thai noodles dish &mdash; for those who aren't afraid of a bit of heat.</p>
           <div class="recipe-details">
@@ -169,7 +169,7 @@
                 Add the drained noodles and toss to combine with the sauce. Cook for a further 1 minute, taste it and adjust seasonings if needed.
               </li>
               <li>
-                Garnish with the greens of the spring onions and sesame seeds, serve, and enjoy!
+                Garnish with the greens of the spring onions and sesame seeds, and serve.
               </li>
             </ol>
           </section>
@@ -178,7 +178,7 @@
     </main>
     <footer>
       <div>
-        <p>Recipe from <a class="recipe-credit" href="https://elavegan.com/spicy-noodles/">Elavegan</a></p>
+        <p>Recipe from <a href="https://elavegan.com/spicy-noodles/">Elavegan</a></p>
         <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
           <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
         </a>
