--- a/recipes/taco-salad.html
+++ b/recipes/taco-salad.html
@@ -149,7 +149,7 @@
               <ul>
                 <li>
                   <input type="checkbox" id="yogurt">
-                  <label for="yogurt">4 oz. plain Greek yogurt</label>
+                  <label for="yogurt">&frac12; cup plain Greek yogurt</label>
                 </li>
                 <li>
                   <input type="checkbox" id="lime">
@@ -211,7 +211,7 @@
     </main>
     <footer>
       <div>
-        <p>Recipe from <a class="recipe-credit" href="https://www.eatingbirdfood.com/healthy-taco-salad/">Eating Bird Food</a></p>
+        <p>Recipe from <a href="https://www.eatingbirdfood.com/healthy-taco-salad/">Eating Bird Food</a></p>
         <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
           <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
         </a>
