--- a/recipes/yogurt-mix.html
+++ b/recipes/yogurt-mix.html
@@ -73,7 +73,7 @@
             <ul>
               <li>
                 <input type="checkbox" id="yogurt">
-                <label for="yogurt">&frac12; cup plain greek yogurt</label>
+                <label for="yogurt">&frac12; cup plain Greek yogurt</label>
               </li>
               <li>
                 <input type="checkbox" id="blueberries">
@@ -97,7 +97,7 @@
               </li>
               <li>
                 <input type="checkbox" id="almonds">
-                <label for="almonds">&frac12; Tbsp. slices almonds</label>
+                <label for="almonds">&frac12; Tbsp. almonds, sliced</label>
               </li>
               <li>
                 <input type="checkbox" id="coconut">
@@ -131,7 +131,7 @@
     </main>
     <footer>
       <div>
-        <p>Recipe from <a class="recipe-credit" href="https://www.jaroflemons.com/granola-breakfast-bowl/">Jar of Lemons</a></p>
+        <p>Recipe from <a href="https://www.jaroflemons.com/granola-breakfast-bowl/">Jar of Lemons</a></p>
         <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
           <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
         </a>
