--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
     </div>
     <header aria-owns="header-logo">
       <div class="hero">
-        <div class="hero-text">
+        <div>
           <h1>Welcome to <span>Odin Recipes</span></h1>
           <p>Your favorite recipes &mdash; all in one place. Let's start cooking!</p>
         </div>
-        <div class="hero-image">
+        <div>
           <img src="img/hat-and-spoon.png" alt="" height="120" width="140">
         </div>
       </div>
     </header>
     <main id="find-a-recipe">
-      <section class="recipes">
+      <section>
         <div>
           <h2>Find a Recipe</h2>
           <article>
             <img src="img/yogurt-mix.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="250" width="250">
             <h3>Granola & Yogurt Bowl</h3>
             <p>
-              This bowl provides vitamins, calcium, protein, healthy carbs, and healthy fats that our bodies need daily.
+              A mix that provides vitamins, calcium, protein, healthy carbs, and healthy fats that our bodies need daily.
             </p>
             <a href="recipes/yogurt-mix.html">Go to recipe <span class="material-symbols-outlined">chevron_right</span></a>
           </article>
