Change paragraph text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="subscribe">
           <div>
             <h2>Wait, there's more!</h2>
-            <p>Want to receive recipes in your email weekly? Press the subscribe button!</p>
+            <p>Want to receive a recipe in your email every week? Press the subscribe button!</p>
           </div>
           <form action="#">
             <button type="button">Subscribe</button>
