Change alt text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="recipes/yogurt-mix.html">Go to recipe <span class="material-symbols-outlined">chevron_right</span></a>
           </article>
           <article>
-            <img src="img/noodles.jpg" alt="Cooked noodles topped with green onions and red bell peppers in a bowl with chopsticks." height="250" width="250">
+            <img src="img/noodles.jpg" alt="Cooked noodles topped with green onions, red bell peppers, and sesame seeds in a bowl with chopsticks." height="250" width="250">
             <h3>Sriracha Noodles</h3>
             <p>
               This dish is a wonderful, quick mid-week meal and healthier than your favorite instant noodle packets.
