Hide icons from accessibility APIs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>
               A mix that provides vitamins, calcium, protein, healthy carbs, and healthy fats that our bodies need daily.
             </p>
-            <a href="recipes/yogurt-mix.html">Go to recipe <span class="material-symbols-outlined">chevron_right</span></a>
+            <a href="recipes/yogurt-mix.html">Go to recipe <span class="material-symbols-outlined" aria-hidden="true">chevron_right</span></a>
           </article>
           <article>
             <img src="img/noodles.jpg" alt="Cooked noodles topped with green onions, red bell peppers, and sesame seeds in a bowl with chopsticks." height="250" width="250">
@@ -45,7 +45,7 @@
             <p>
               This dish is a wonderful, quick mid-week meal and healthier than your favorite instant noodle packets.
             </p>
-            <a href="recipes/noodles.html">Go to recipe <span class="material-symbols-outlined">chevron_right</span></a>
+            <a href="recipes/noodles.html">Go to recipe <span class="material-symbols-outlined" aria-hidden="true">chevron_right</span></a>
           </article>
           <article>
             <img src="img/taco-salad.jpg" alt="Tortilla chips topped with ground turkey, vegetables, shredded cheese, and salad dressing in a bowl." height="250" width="250">
@@ -53,7 +53,7 @@
             <p>
               Do you participate in Taco Tuesday regularly? There are many different taco recipes... and this healthy taco salad.
             </p>
-            <a href="recipes/taco-salad.html">Go to recipe <span class="material-symbols-outlined">chevron_right</span></a>
+            <a href="recipes/taco-salad.html">Go to recipe <span class="material-symbols-outlined" aria-hidden="true">chevron_right</span></a>
           </article>
         </div>
       </section>
