--- a/recipes/yogurt-mix.html
+++ b/recipes/yogurt-mix.html
@@ -20,14 +20,14 @@
       <ul>
         <li>
           <a href="../recipes/taco-salad.html" aria-label="Previous recipe">
-            <span class="material-symbols-outlined">chevron_left</span>
+            <span class="material-symbols-outlined" aria-hidden="true">chevron_left</span>
             Previous Recipe
           </a>
         </li>
         <li>
           <a href="../recipes/noodles.html" aria-label="Next recipe">
             Next Recipe
-            <span class="material-symbols-outlined">chevron_right</span>
+            <span class="material-symbols-outlined" aria-hidden="true">chevron_right</span>
           </a>
         </li>
       </ul>
