Remove form elements from list items

--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -71,82 +71,28 @@
           <section>
             <h3>Ingredients</h3>
             <ul>
-              <li>
-                <input type="checkbox" id="noodles">
-                <label for="noodles">8 oz. rice noodles</label>
-              </li>
-              <li>
-                <input type="checkbox" id="oil">
-                <label for="oil">1 Tbsp. oil</label>
-              </li>
-              <li>
-                <input type="checkbox" id="ginger">
-                <label for="ginger">1 Tbsp. ginger, grated</label>
-              </li>
-              <li>
-                <input type="checkbox" id="garlic">
-                <label for="garlic">3 to 4 garlic cloves, minced</label>
-              </li>
-              <li>
-                <input type="checkbox" id="sweet-pepper">
-                <label for="sweet-pepper">2 sweet red peppers, chopped</label>
-              </li>
-              <li>
-                <input type="checkbox" id="hot-pepper">
-                <label for="hot-pepper">1 hot red chili pepper, minced</label>
-              </li>
-              <li>
-                <input type="checkbox" id="onion">
-                <label for="onion">3 spring onions, chopped</label>
-              </li>
-              <li>
-                <input type="checkbox" id="paprika">
-                <label for="paprika">&frac14; tsp. smoked paprika (optional)</label>
-              </li>
-              <li>
-                <input type="checkbox" id="seasoning">
-                <label for="seasoning">Salt and black pepper</label>
-              </li>
-              <li>
-                <input type="checkbox" id="paste">
-                <label for="paste">3 Tbsp. tomato paste</label>
-              </li>
-              <li>
-                <input type="checkbox" id="sriracha">
-                <label for="sriracha">1 Tbsp. sriracha</label>
-              </li>
+              <li>8 oz. rice noodles</li>
+              <li>1 Tbsp. oil</li>
+              <li>1 Tbsp. ginger, grated</li>
+              <li>3 to 4 garlic cloves, minced</li>
+              <li>2 sweet red peppers, chopped</li>
+              <li>1 hot red chili pepper, minced</li>
+              <li>3 spring onions, chopped</li>
+              <li>&frac14; tsp. smoked paprika (optional)</li>
+              <li>Salt and black pepper</li>
+              <li>3 Tbsp. tomato paste</li>
+              <li>1 Tbsp. sriracha</li>
             </ul>
             <section>
               <h4>Sauce</h4>
               <ul>
-                <li>
-                  <input type="checkbox" id="liquid">
-                  <label for="liquid">&frac23; cup vegetable broth or water</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="soy">
-                  <label for="soy">2 to 3 Tbsp. dark soy sauce</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="vinegar">
-                  <label for="vinegar">1 Tbsp. rice vinegar</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="syrup">
-                  <label for="syrup">1 Tbsp. maple syrup</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="cornstarch">
-                  <label for="cornstarch">&frac12; Tbsp. cornstarch</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="sesame">
-                  <label for="sesame">&frac12; tsp. sesame oil</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="flakes">
-                  <label for="flakes">Red pepper flakes</label>
-                </li>
+                <li>&frac23; cup vegetable broth or water</li>
+                <li>2 to 3 Tbsp. dark soy sauce</li>
+                <li>1 Tbsp. rice vinegar</li>
+                <li>1 Tbsp. maple syrup</li>
+                <li>&frac12; Tbsp. cornstarch</li>
+                <li>&frac12; tsp. sesame oil</li>
+                <li>Red pepper flakes</li>
               </ul>
             </section>
           </section>
