--- a/recipes/taco-salad.html
+++ b/recipes/taco-salad.html
@@ -73,116 +73,41 @@
             <section>
               <h4>Turkey Taco Meat</h4>
               <ul>
-                <li>
-                  <input type="checkbox" id="bell-peppers">
-                  <label for="bell-peppers">12 mini bell peppers</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="spray">
-                  <label for="spray">Olive oil or avocado oil cooking spray</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="oil">
-                  <label for="oil">&frac12; Tbsp. olive oil</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="turkey">
-                  <label for="turkey">1 lb. ground turkey</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="seasoning">
-                  <label for="seasoning">2 Tbsp. taco seasoning</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="meat-salsa">
-                  <label for="meat-salsa">2 Tbsp. salsa</label>
-                </li>
+                <li>12 mini bell peppers</li>
+                <li>Olive oil or avocado oil cooking spray</li>
+                <li>&frac12; Tbsp. olive oil</li>
+                <li>1 lb. ground turkey</li>
+                <li>2 Tbsp. taco seasoning</li>
+                <li>2 Tbsp. salsa</li>
               </ul>
             </section>
             <section>
               <h4>Salad</h4>
               <ul>
-                <li>
-                  <input type="checkbox" id="lettuce">
-                  <label for="lettuce">1 large head romaine lettuce, chopped</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="tomato">
-                  <label for="tomato">&frac12; cup grape or cherry tomatoes, chopped</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="corn">
-                  <label for="corn">&frac12; cup sweet corn, thawed</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="cheese">
-                  <label for="cheese">&frac14; cup shredded Mexican cheese</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="jalapeno">
-                  <label for="jalapeno">&frac12; jalape&ntilde;o pepper, de-seeded and chopped</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="avocado">
-                  <label for="avocado">1 avocado, chopped into chunks</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="chips">
-                  <label for="chips">&frac14; cup tortilla chips, broken into pieces</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="salad-cilantro">
-                  <label for="salad-cilantro">Chopped cilantro, for garnish</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="hot-sauce">
-                  <label for="hot-sauce">Hot sauce (optional)</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="salad-salsa">
-                  <label for="salad-salsa">Salsa, for taste</label>
-                </li>
+                <li>1 large head romaine lettuce, chopped</li>
+                <li>&frac12; cup grape or cherry tomatoes, chopped</li>
+                <li>&frac12; cup sweet corn, thawed</li>
+                <li>&frac14; cup shredded Mexican cheese</li>
+                <li>&frac12; jalape&ntilde;o pepper, de-seeded and chopped</li>
+                <li>1 avocado, chopped into chunks</li>
+                <li>&frac14; cup tortilla chips, broken into pieces</li>
+                <li>Chopped cilantro, for garnish</li>
+                <li>Hot sauce (optional)</li>
+                <li>Salsa, for taste</li>
               </ul>
             </section>
             <section>
               <h4>Creamy Southwest Dressing</h4>
               <ul>
-                <li>
-                  <input type="checkbox" id="yogurt">
-                  <label for="yogurt">&frac12; cup plain Greek yogurt</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="lime">
-                  <label for="lime">1 tsp. lime juice</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="cumin">
-                  <label for="cumin">&frac18; tsp. cumin</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="chili">
-                  <label for="chili">&frac14; tsp. chili powder</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="garlic">
-                  <label for="garlic">&frac14; tsp. garlic powder</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="salt">
-                  <label for="salt">&frac14; tsp. salt</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="pepper">
-                  <label for="pepper">&frac14; tsp. pepper</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="dressing-salsa">
-                  <label for="dressing-salsa">&frac14; cup salsa</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="dressing-cilantro">
-                  <label for="dressing-cilantro">2 Tbsp. cilantro</label>
-                </li>
+                <li>&frac12; cup plain Greek yogurt</li>
+                <li>1 tsp. lime juice</li>
+                <li>&frac18; tsp. cumin</li>
+                <li>&frac14; tsp. chili powder</li>
+                <li>&frac14; tsp. garlic powder</li>
+                <li>&frac14; tsp. salt</li>
+                <li>&frac14; tsp. pepper</li>
+                <li>&frac14; cup salsa</li>
+                <li>2 Tbsp. cilantro</li>
               </ul>
             </section>
           </section>
