--- a/recipes/yogurt-mix.html
+++ b/recipes/yogurt-mix.html
@@ -71,42 +71,15 @@
           <section>
             <h3>Ingredients</h3>
             <ul>
-              <li>
-                <input type="checkbox" id="yogurt">
-                <label for="yogurt">&frac12; cup plain Greek yogurt</label>
-              </li>
-              <li>
-                <input type="checkbox" id="blueberries">
-                <label for="blueberries">&frac14; cup blueberries</label>
-              </li>
-              <li>
-                <input type="checkbox" id="raspberries">
-                <label for="raspberries">&frac14; cup raspberries</label>
-              </li>
-              <li>
-                <input type="checkbox" id="cantaloupe">
-                <label for="cantaloupe">&frac12; cup cantaloupe</label>
-              </li>
-              <li>
-                <input type="checkbox" id="goji">
-                <label for="goji">&frac12; Tbsp. goji berries</label>
-              </li>
-              <li>
-                <input type="checkbox" id="pumpkin">
-                <label for="pumpkin">&frac12; Tbsp. pumpkin seeds</label>
-              </li>
-              <li>
-                <input type="checkbox" id="almonds">
-                <label for="almonds">&frac12; Tbsp. almonds, sliced</label>
-              </li>
-              <li>
-                <input type="checkbox" id="coconut">
-                <label for="coconut">&frac12; Tbsp. coconut shavings</label>
-              </li>
-              <li>
-                <input type="checkbox" id="granola">
-                <label for="granola">&frac14; cup granola</label>
-              </li>
+              <li>&frac12; cup plain Greek yogurt</li>
+              <li>&frac14; cup blueberries</li>
+              <li>&frac14; cup raspberries</li>
+              <li>&frac12; cup cantaloupe</li>
+              <li>&frac12; Tbsp. goji berries</li>
+              <li>&frac12; Tbsp. pumpkin seeds</li>
+              <li>&frac12; Tbsp. almonds, sliced</li>
+              <li>&frac12; Tbsp. coconut shavings</li>
+              <li>&frac14; cup granola</li>
             </ul>
           </section>
           <section>
