--- a/recipes/taco-salad.html
+++ b/recipes/taco-salad.html
@@ -136,7 +136,9 @@
     </main>
     <footer>
       <div>
-        <p>Recipe from <a href="https://www.eatingbirdfood.com/healthy-taco-salad/">Eating Bird Food</a></p>
+        <p>Recipe from
+          <a href="https://www.eatingbirdfood.com/healthy-taco-salad/">Eating Bird Food</a>
+        </p>
         <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
           <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
         </a>
