--- a/recipes/yogurt-mix.html
+++ b/recipes/yogurt-mix.html
@@ -104,7 +104,9 @@
     </main>
     <footer>
       <div>
-        <p>Recipe from <a href="https://www.jaroflemons.com/granola-breakfast-bowl/">Jar of Lemons</a></p>
+        <p>Recipe from
+          <a href="https://www.jaroflemons.com/granola-breakfast-bowl/">Jar of Lemons</a>
+        </p>
         <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
           <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
         </a>
