--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -124,7 +124,9 @@
     </main>
     <footer>
       <div>
-        <p>Recipe from <a href="https://elavegan.com/spicy-noodles/">Elavegan</a></p>
+        <p>Recipe from
+          <a href="https://elavegan.com/spicy-noodles/">Elavegan</a>
+        </p>
         <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
           <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
         </a>
