Change aside text

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       <aside>
         <div class="subscribe">
           <div>
-            <h2>Wait, there's more!</h2>
-            <p>Want to receive a recipe in your email every week? Press the subscribe button!</p>
+            <h2>More Recipes, On Us</h2>
+            <p>Press the subscribe button to receive a recipe in your email every week!</p>
           </div>
           <form action="#">
             <button type="button">Subscribe</button>
